--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div class="device-notification">
   <a class="device-notification--logo" href="#0">
     <img src="assets/img/logo.png" alt="Global">
-    <p>Global</p>
+    <p>Lukas Gonzalez</p>
   </a>
   <p class="device-notification--message">Global has so much to offer that we must request you orient your device to portrait or find a larger screen. You won't be disappointed.</p>
 </div>
@@ -28,9 +28,9 @@
         <header class="header">
           <a class="header--logo" href="#0">
             <img src="assets/img/logo.png" alt="Global">
-            <p>Global</p>
+            <p>Lukas Gonzalez</p>
           </a>
-          <button class="header--cta cta">Hire Us</button>
+          <button class="header--cta cta">Hire Me</button>
           <div class="header--nav-toggle">
             <span></span>
           </div>
@@ -41,7 +41,7 @@
             <li><span>Works</span></li>
             <li><span>About</span></li>
             <li><span>Contact</span></li>
-            <li><span>Hire us</span></li>
+            <li><span>Hire me</span></li>
           </ul>
         </nav>
         <ul class="l-main-content main-content">
@@ -49,7 +49,7 @@
             <div class="intro">
               <div class="intro--banner">
                 <h1>Your next<br>interactive<br>experience</h1>
-                <button class="cta">Hire Us
+                <button class="cta">Hire me
                   <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
                   <g transform="translate(0.000000,118.000000) scale(0.100000,-0.100000)">
                     <path d="M870,1167c-34-17-55-57-46-90c3-15,81-100,194-211l187-185l-565-1c-431,0-571-3-590-13c-55-28-64-94-18-137c21-20,33-20,597-20h575l-192-193C800,103,794,94,849,39c20-20,39-29,61-29c28,0,63,30,298,262c147,144,272,271,279,282c30,51,23,60-219,304C947,1180,926,1196,870,1167z"/>
@@ -61,16 +61,23 @@
               </div>
               <div class="intro--options">
                 <a href="#0">
-                  <h3>Metiew &amp; Smith</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                  <h3>Education</h3>
+                  <p>IronHack - Web Development</p>
+                  <p>Miami-Dade College - Pre Nursing</p>
                 </a>
                 <a href="#0">
-                  <h3>Fantasy interactive</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                  <h3>Skills</h3>
+                  <p>JavaScript, HTML, CSS, ReactJS,
+                    NextJS, NodeJS, GitHub, Git,
+                    ExpressJS, MongoDB, Canvas,
+                    Material UI, JWT, SEO.</p>
                 </a>
                 <a href="#0">
-                  <h3>Paul &amp; shark</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                  <h3>Experience</h3>
+                  <p>Web Weavers LLC: </p>
+                  <p>Full-Stack Web Developer</p>
+                  <p>Miami Laser Tech: </p>
+                  <p>Web Developer - SEO</p>
                 </a>
               </div>
             </div>
@@ -161,14 +168,14 @@
               <div class="contact--lockup">
                 <div class="modal">
                   <div class="modal--information">
-                    <p>Pawia 5, 31-154 Kraków, Poland</p>
-                    <a href="mailto:ouremail@gmail.com">ouremail@gmail.com</a>
-                    <a href="tel:+148126287560">+48 12 628 75 60</a>
+                    <p>Miami, FL</p>
+                    <a href="mailto:lukasfullstack@gmail.com">lukasfullstack@gmail.com</a>
+                    <a href="tel:3053338391">(305)-333-8391</a>
                   </div>
                   <ul class="modal--options">
-                    <li><a href="#0">Bēhance</a></li>
-                    <li><a href="#0">dribbble</a></li>
-                    <li><a href="mailto:ouremail@gmail.com">Contact Us</a></li>
+                    <!-- <li><a href="#0">Bēhance</a></li> -->
+                    <!-- <li><a href="#0">dribbble</a></li> -->
+                    <li><a href="mailto:lukasfullstack@gmail.com">Contact Me</a></li>
                   </ul>
                 </div>
               </div>
@@ -268,7 +275,7 @@
     <li>Works</li>
     <li>About</li>
     <li>Contact</li>
-    <li>Hire us</li>
+    <li>Hire me</li>
   </ul>
 </div>
 
