edited works page and added text for all projects

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                       <div class="slider--item-image">
                         <img src="assets/img/work-victory.jpg" alt="Victory">
                       </div>
-                      <p class="slider--item-title">Victory</p>
-                      <p class="slider--item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                      <p class="slider--item-title">Vice Pong</p>
+                      <p class="slider--item-description">Video game inspired by classic arcade game "Pong". Created using Canvas, HTML and Javascript</p>
                     </a>
                   </li>
                   <li class="slider--item slider--item-center">
@@ -101,8 +101,8 @@
                       <div class="slider--item-image">
                         <img src="assets/img/work-metiew-smith.jpg" alt="Metiew and Smith">
                       </div>
-                      <p class="slider--item-title">Metiew &amp; Smith</p>
-                      <p class="slider--item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                      <p class="slider--item-title">ScoreCard</p>
+                      <p class="slider--item-description">Golf score tracking web app created with ReactJS. Backend was created using NodeJS.</p>
                     </a>
                   </li>
                   <li class="slider--item slider--item-right">
@@ -110,8 +110,17 @@
                       <div class="slider--item-image">
                         <img src="assets/img/work-alex-nowak.jpg" alt="Alex Nowak">
                       </div>
-                      <p class="slider--item-title">Alex Nowak</p>
-                      <p class="slider--item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                      <p class="slider--item-title">Miami Laser Tech</p>
+                      <p class="slider--item-description">Business website created with NextJS. Material UI used for design. Integrated SEO.</p>
+                    </a>
+                  </li>
+                  <li class="slider--item slider--item-right">
+                    <a href="#0">
+                      <div class="slider--item-image">
+                        <img src="assets/img/work-alex-nowak.jpg" alt="Alex Nowak">
+                      </div>
+                      <p class="slider--item-title">Restrepo</p>
+                      <p class="slider--item-description">Portfolio website created with HTML, JavaScript, CSS and SASS.</p>
                     </a>
                   </li>
                 </ul>
@@ -183,7 +192,7 @@
           </li>
           <li class="l-section section">
             <div class="hire">
-              <h2>You want us to do</h2>
+              <h2>You want me to do</h2>
               <!-- checkout formspree.io for easy form setup -->
               <form class="work-request">
                 <div class="work-request--options">
@@ -216,7 +225,7 @@
                         <path d="M950,705L555,310L360,505C253,612,160,700,155,700c-6,0-44-34-85-75l-75-75l278-278L550-5l475,475c261,261,475,480,475,485c0,13-132,145-145,145C1349,1100,1167,922,950,705z"/>
                       </g>
                       </svg>
-                      Motion Design
+                      Backend
                     </label>
                   </span>
                   <span class="options-b">
@@ -248,7 +257,7 @@
                         <path d="M950,705L555,310L360,505C253,612,160,700,155,700c-6,0-44-34-85-75l-75-75l278-278L550-5l475,475c261,261,475,480,475,485c0,13-132,145-145,145C1349,1100,1167,922,950,705z"/>
                       </g>
                       </svg>
-                      Marketing
+                      Marketing/SEO
                     </label>
                   </span>
                 </div>
