--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                   <li class="slider--item slider--item-left">
                     <a href="#0">
                       <div class="slider--item-image">
-                        <img src="assets/img/work-victory.jpg" alt="Victory">
+                        <img src="assets/img/vicepong1-img.png" alt="Victory">
                       </div>
                       <p class="slider--item-title">Vice Pong</p>
                       <p class="slider--item-description">Video game inspired by classic arcade game "Pong". Created using Canvas, HTML and Javascript</p>
@@ -99,7 +99,7 @@
                   <li class="slider--item slider--item-center">
                     <a href="#0">
                       <div class="slider--item-image">
-                        <img src="assets/img/work-metiew-smith.jpg" alt="Metiew and Smith">
+                        <img src="assets/img/scorecard1-img.png" alt="Metiew and Smith">
                       </div>
                       <p class="slider--item-title">ScoreCard</p>
                       <p class="slider--item-description">Golf score tracking web app created with ReactJS. Backend was created using NodeJS.</p>
@@ -108,7 +108,7 @@
                   <li class="slider--item slider--item-right">
                     <a href="#0">
                       <div class="slider--item-image">
-                        <img src="assets/img/work-alex-nowak.jpg" alt="Alex Nowak">
+                        <img src="assets/img/miami.png" alt="Alex Nowak">
                       </div>
                       <p class="slider--item-title">Miami Laser Tech</p>
                       <p class="slider--item-description">Business website created with NextJS. Material UI used for design. Integrated SEO.</p>
