added links to Works

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               <div class="work--lockup">
                 <ul class="slider">
                   <li class="slider--item slider--item-left">
-                    <a href="#0">
+                    <a href="https://lukag7.github.io/Game-Project/" target="_blank">
                       <div class="slider--item-image">
                         <img src="assets/img/vicepong1-img.png" alt="Victory">
                       </div>
@@ -97,7 +97,7 @@
                     </a>
                   </li>
                   <li class="slider--item slider--item-center">
-                    <a href="#0">
+                    <a href="https://elegant-centaur-2ad7d4.netlify.app/" target="_blank">
                       <div class="slider--item-image">
                         <img src="assets/img/scorecard1-img.png" alt="Metiew and Smith">
                       </div>
@@ -106,9 +106,9 @@
                     </a>
                   </li>
                   <li class="slider--item slider--item-right">
-                    <a href="#0">
+                    <a href="https://miami-laser-tech-e1d9.vercel.app/" target="_blank">
                       <div class="slider--item-image">
-                        <img src="assets/img/miami.png" alt="Alex Nowak">
+                        <img src="assets/img/miami.png" alt="Miami Laser Tech">
                       </div>
                       <p class="slider--item-title">Miami Laser Tech</p>
                       <p class="slider--item-description">Business website created with NextJS. Material UI used for design. Integrated SEO.</p>
@@ -117,7 +117,7 @@
                   <li class="slider--item slider--item-right">
                     <a href="#0">
                       <div class="slider--item-image">
-                        <img src="assets/img/work-alex-nowak.jpg" alt="Alex Nowak">
+                        <img src="assets/img/inprogress.png" alt="Restrepo">
                       </div>
                       <p class="slider--item-title">Restrepo</p>
                       <p class="slider--item-description">Portfolio website created with HTML, JavaScript, CSS and SASS.</p>
