--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                   <li class="slider--item slider--item-left">
                     <a href="https://lukag7.github.io/Game-Project/" target="_blank">
                       <div class="slider--item-image">
-                        <img src="assets/img/vicepong1-img.png" alt="Victory">
+                        <img src="assets/img/vicepong1-img.png" alt="Vice Pong">
                       </div>
                       <p class="slider--item-title">Vice Pong</p>
                       <p class="slider--item-description">Video game inspired by classic arcade game "Pong". Created using Canvas, HTML and Javascript</p>
@@ -99,7 +99,7 @@
                   <li class="slider--item slider--item-center">
                     <a href="https://elegant-centaur-2ad7d4.netlify.app/" target="_blank">
                       <div class="slider--item-image">
-                        <img src="assets/img/scorecard1-img.png" alt="Metiew and Smith">
+                        <img src="assets/img/scorecard1-img.png" alt="ScoreCard">
                       </div>
                       <p class="slider--item-title">ScoreCard</p>
                       <p class="slider--item-description">Golf score tracking web app created with ReactJS. Backend was created using NodeJS.</p>
@@ -148,7 +148,7 @@
             <div class="about">
               <div class="about--banner">
                 <h2>Passionate<br>Web Developer<br>making an<br>impact</h2>
-                <a href="#0">Career
+                <!-- <a href="#0">Career
                   <span>
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
                     <g transform="translate(0.000000,118.000000) scale(0.100000,-0.100000)">
@@ -156,18 +156,18 @@
                     </g>
                     </svg>
                   </span>
-                </a>
+                </a> -->
                 <img src="assets/img/about-visual.png" alt="About Us">
               </div>
               <div class="about--options">
                 <a href="#0">
-                  <h3>Winners</h3>
+                  <h3>LinkedIn</h3>
                 </a>
                 <a href="#0">
-                  <h3>Philosophy</h3>
+                  <h3>GitHub</h3>
                 </a>
                 <a href="#0">
-                  <h3>History</h3>
+                  <h3>Discord</h3>
                 </a>
               </div>
             </div>
