--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
           <ul class="side-nav">
             <li class="is-active"><span>Home </span></li>
             <li><span>Works</span></li>
-            <li><span>About</span></li>
+            <li><span>Info</span></li>
             <li><span>Contact</span></li>
-            <li><span>Hire me</span></li>
+            <!-- <li><span>Hire me</span></li> -->
           </ul>
         </nav>
         <ul class="l-main-content main-content">
@@ -63,14 +63,15 @@
                 <a href="#0">
                   <h3>Education</h3>
                   <p>IronHack - Web Development</p>
-                  <p>Miami-Dade College - Pre Nursing</p>
+                  <p>CompTIA - Security+ &#40;In Progress&#41;</p>
+                  <p>EC-Council - CEH &#40;In Progress&#41;</p>
                 </a>
                 <a href="#0">
                   <h3>Skills</h3>
-                  <p>JavaScript, HTML, CSS, ReactJS,
-                    NextJS, NodeJS, GitHub, Git,
-                    ExpressJS, MongoDB, Canvas,
-                    Material UI, JWT, SEO.</p>
+                  <p>JavaScript, HTML, CSS, ReactJS,</p>
+                    <p>NextJS, NodeJS, GitHub, Git,</p>
+                    <p>ExpressJS, MongoDB, Canvas,</p>
+                    <p>Material UI, JWT, SEO, Python.</p>
                 </a>
                 <a href="#0">
                   <h3>Experience</h3>
@@ -144,19 +145,11 @@
               </div>
             </div>
           </li>
-          <li class="l-section section">
+          <!-- <li class="l-section section">
             <div class="about">
               <div class="about--banner">
-                <h2>Passionate<br>Web Developer<br>making an<br>impact</h2>
-                <!-- <a href="#0">Career
-                  <span>
-                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
-                    <g transform="translate(0.000000,118.000000) scale(0.100000,-0.100000)">
-                      <path d="M870,1167c-34-17-55-57-46-90c3-15,81-100,194-211l187-185l-565-1c-431,0-571-3-590-13c-55-28-64-94-18-137c21-20,33-20,597-20h575l-192-193C800,103,794,94,849,39c20-20,39-29,61-29c28,0,63,30,298,262c147,144,272,271,279,282c30,51,23,60-219,304C947,1180,926,1196,870,1167z"/>
-                    </g>
-                    </svg>
-                  </span>
-                </a> -->
+                <h2>Check me,<br>and my<br>work out!<br></h2>
+               
                 <img src="assets/img/about-visual.png" alt="About Us">
               </div>
               <div class="about--options">
@@ -166,12 +159,10 @@
                 <a href="#0">
                   <h3>GitHub</h3>
                 </a>
-                <a href="#0">
-                  <h3>Discord</h3>
-                </a>
+               
               </div>
             </div>
-          </li>
+          </li> -->
           <li class="l-section section">
             <div class="contact">
               <div class="contact--lockup">
@@ -294,7 +285,7 @@
     <li>Works</li>
     <li>About</li>
     <li>Contact</li>
-    <li>Hire me</li>
+    <!-- <li>Hire me</li> -->
   </ul>
 </div>
 
