--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                       <div class="slider--item-image">
                         <img src="assets/img/inprogress.png" alt="Restrepo">
                       </div>
-                      <p class="slider--item-title">Restrepo</p>
+                      <p class="slider--item-title">Restrepo Portfolio</p>
                       <p class="slider--item-description">Portfolio website created with HTML, JavaScript, CSS and SASS.</p>
                     </a>
                   </li>
