--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                   </svg>
                   <span class="btn-background"></span>
                 </button>
-                <img src="assets/img/introduction-visual.png" alt="Welcome">
+                <img class="headshot" src="assets/img/cropped-head.png" alt="Welcome">
               </div>
               <div class="intro--options">
                 <a href="#0">
